# sinhala-ed-assistant

./: .dockerignore  .env.azure.local  .env.example  .gitignore  AZURE_CICD_SETUP.md  AZURE_DEPLOYMENT_REPORT.md  DOCKER_BUILD_STEPS.md  DOCKER_SETUP.md  Dockerfile  ENDPOINTS.md  PRICING_PLAN_IMPLEMENTATION.md  QUICK_START_TWO_STAGE.md  README.md  REFACTORING_ARCHITECTURE.md  SETUP.md  SETUP_DATABASE.md  SinhalaLearn-without-evaluation.sql  TWO_STAGE_RETRIEVAL.md  alembic.ini  analyze_marks_schema.py  analyze_paper.py  analyze_paper2.py  apply_cascades.py  check_constraints.py  check_references.json  check_references.py  check_scores.py  constraints_output.txt  db_test_out.txt  debug_evaluation.py  debug_paper_config.py  debug_resource_check.py  debug_schema_check.py  directory_tree.txt  dump_scores.py  find_session.py  folder_structure.py  full-report-text.txt  full_database_schema.sql  generate_tree.py  (+25 more)
.github/workflows/: azure-backend-cicd.yml  build.yml  ios-build.yml
api/app/: main.py
app/: logging_config.py  main.py
app/core/: config.py  database.py  firebase.py  gemini_client.py  pricing_plans.py  security.py  utils.py  whisper_loader.py
app/database/: models.py
app/models/: chat_message.py  document.py
app/repositories/: chat_session_repository.py  message_attachment_repository.py  message_context_repository.py  message_repository.py  message_safety_repository.py  password_reset_token_repository.py  processing_log_repository.py  refresh_token_repository.py  resource_chunk_repository.py  resource_repository.py  session_resource_repository.py  user_repository.py
app/routers/: __init__.py  admin.py  auth.py  chat_sessions.py  evaluation.py  messages.py  pricing.py  resources.py  rubrics.py  usage.py  users.py  websockets.py
app/schemas/: auth.py  chat.py  evaluation.py  message.py  message_relations.py  pricing.py  resource.py  resource_chunk.py  rubric.py  safety_summary.py  session_resource.py  usage.py  user.py
app/services/: __init__.py  answerability_service.py  api_usage_log_service.py  audio_storage.py  chat_service.py  chat_session_repository.py  chat_session_service.py  email_service.py  embedding_service.py  hybrid_retrieval_service.py  intent_detection_service.py  message_attachment_repository.py  message_attachment_service.py  message_context_repository.py  message_context_service.py  message_repository.py  message_safety_repository.py  message_safety_service.py  message_service.py  pricing_plan_service.py  rag_service.py  resource_chunk_repository.py  resource_chunk_service.py  resource_repository.py  resource_service.py  safety_summary_service.py  semantic_similarity_service.py  session_resource_repository.py  session_resource_service.py  xai_service.py  (+3 more)
config/: settings.py
docker/: docker-compose.yml
migrations/: add_document_embeddings.sql  add_question_type_and_correct_answer.sql  add_resource_chunks_index.sql  add_user_columns.sql  env.py  remove_unwanted_tables.sql  update_messages_table_enum.sql
scripts/: docker.ps1  migrate_chunks.py  modal_trocr_service.py  verify_nlp.py
tests/: test_evaluation_gemini_cost_controls.py  test_evaluation_limits.py  test_evaluation_stream.py  test_marking_schema_service.py  test_marking_schema_workflow.py  test_mcq_grading.py  test_pricing_admin_api.py  test_resource_processor_service.py  test_resource_processor_service_integration.py  test_scoring_bands.py  test_table_detection.py  test_table_detection_integration.py
tmp/: check_answer_doc.py  check_latest_data.py  final_verify.py  inspect_models.py  test_json_repair.py  test_json_repair_clean.py  update_db_schema.py  verify_db_changes.py  verify_feedback.py  verify_schema_postgresql.py
uploads/: a7019cf4-20ec-45df-a29e-65bd8c765f7e_test_question_paper.txt
utils/: here.txt
(+256 files in other folders)
