[project]
name = "sinhala-ed-assistant"
version = "0.1.0"
description = "Sinhala Essay Evaluation System with AI Feedback"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "fastapi>=0.123.0",
    "uvicorn[standard]>=0.38.0",
    "sentence-transformers>=2.2.0",
    "rank-bm25>=0.2.0",
    "google-generativeai>=0.8.5",
    "google-api-python-client>=2.187.0",
    "torch>=2.9.0",
    "numpy>=2.2.0",
    "pydantic>=2.12.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "pillow>=12.0.0",
    "aiofiles>=23.0.0",
    "python-jose[cryptography]>=3.3.0",
    "opencv-python>=4.12.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "transformers>=4.57.0",
    "tqdm>=4.67.0",
    "librosa>=0.11.0",
    "soundfile>=0.13.0",
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.13",
    "alembic>=1.13.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
